--- a/index.html
+++ b/index.html
@@ -4,28 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.js"></script>
-    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.css" />
-    <title>Document</title>
+    <title>Urgent Care</title>
 </head>
-<h1>This is a test urgent care system</h1>
-<!-- <body>
-    <div id="firebase">
-        <form method="post" action="/http://localhost:3000/createaccount">
-            <p>
-                <label for="username">Username:</label>
-                <input type="text" name="username" id="username">
-            </p>
-            <p>
-                <label for="password">Password:</label>
-                <input type="text" name="password" id="password">
-            </p>
-            <p>
-                <input type="submit" value="Login">
-            </p>
-        </form>
-    </div>
-     -->
-   
+<body>
+    <h1>Welcome to UrgentCare-API</h1>
+    <p>The Urgent API </p>
 </body>
 </html>
